--- a/dears_practice/pubspec.yaml
+++ b/dears_practice/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.0
+  go_router: ^14.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
