--- a/dears_practice/pubspec.yaml
+++ b/dears_practice/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   dio: ^4.0.0
   go_router: ^14.0.2
+  freezed_annotation: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +42,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  lint: ^2.3.0
+  build_runner: ^2.3.0
+  freezed: ^2.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
